# octo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
docs/source/examples/: example.ipynb
docs/source/modulesrst/: basis.rst  octo.rst  overcomplete.rst
examples/: example.ipynb
octo/: __init__.py  basis.py  measurement.py  octo.py  overcomplete.py
tests/: test_basis.py  test_measurement.py  test_octo.py  test_overcomplete.py
