[tool.poetry]
name = "octo"
version = "0.1.0"
description = ""
authors = ["auggiemarignier <augustin.marignier@anu.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
